--- a/QuantumQQTeamApp/Src/LeadListScreen.fx.yaml
+++ b/QuantumQQTeamApp/Src/LeadListScreen.fx.yaml
@@ -1,4 +1,5 @@
 LeadListScreen As screen:
+    BackgroundImage: =
     OnVisible: |-
         =Refresh(LeadInformations);
         Set(VarPopUpInprogress,false);
@@ -594,8 +595,10 @@ LeadListScreen As screen:
                         ZIndex: =9
 
     Timer1 As timer:
+        AutoStart: =true
         Duration: =2000
-        OnTimerEnd: =Set(VarListLoad,true)
+        OnTimerEnd: =Set(VarLoder,false)
+        OnTimerStart: =Set(VarLoder,true)
         Visible: =false
         X: =40
         Y: =40
@@ -694,12 +697,25 @@ LeadListScreen As screen:
             Y: =lblmsgLS.Y+ lblmsgLS.Height+10
             ZIndex: =7
 
-    Image4 As image:
-        Fill: =
-        Height: =Parent.Height
-        Image: =loader
-        ImagePosition: =ImagePosition.Center
-        Visible: =false
-        Width: =Parent.Width
-        ZIndex: =9
+    GrpLoderLS As group:
+        Height: =5
+        Width: =5
+        X: =60
+        Y: =60
+        ZIndex: =11
+
+        Image4 As image:
+            Fill: =RGBA(255, 255, 255, 1)
+            Image: ='waiting-icon-gif-4'
+            Visible: =VarLoder
+            X: =611
+            Y: =410
+            ZIndex: =9
+
+        Rectangle2 As rectangle:
+            Fill: =RGBA(0,0,0,0.17)
+            Height: =Parent.Height
+            Visible: =VarLoder
+            Width: =Parent.Width
+            ZIndex: =10
 
