--- a/QuantumTechnicianApp/Src/DashboardScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/DashboardScreen.fx.yaml
@@ -1161,7 +1161,7 @@ DashboardScreen As screen:
                     Width: =Parent.Width
                     ZIndex: =1
 
-    PopoploaderCS_1 As groupContainer.manualLayoutContainer:
+    PopoploaderDS As groupContainer.manualLayoutContainer:
         Fill: =RGBA(0, 0, 0, 0.29)
         Height: =Parent.Height
         Visible: =VarSyncPopup
