--- a/QuantumTechnicianApp/Src/DashboardScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/DashboardScreen.fx.yaml
@@ -1179,7 +1179,7 @@ DashboardScreen As screen:
             Y: =(Parent.Height-Self.Height)/2
             ZIndex: =1
 
-        ctnLoaderCS_1 As groupContainer.verticalAutoLayoutContainer:
+        ctnLoaderDS As groupContainer.verticalAutoLayoutContainer:
             BorderThickness: =1
             Height: =borderLoaderPopuoCS_1.Height
             LayoutDirection: =LayoutDirection.Vertical
@@ -1220,7 +1220,6 @@ DashboardScreen As screen:
                 ZIndex: =2
 
             btnOkPopupCS_1 As button:
-                AlignInContainer: =AlignInContainer.Center
                 Fill: =RGBA(255, 0, 0, 1)
                 Font: =Font.Arial
                 HoverFill: =ColorFade(Self.Fill, -20%)
@@ -1318,3 +1317,4 @@ DashboardScreen As screen:
                     Width: =4
                     X: =1
                     ZIndex: =5
+
