--- a/QuantumTechnicianApp/Src/DashboardScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/DashboardScreen.fx.yaml
@@ -428,7 +428,7 @@ DashboardScreen As screen:
                             Y: =0.07304526748976059
                             ZIndex: =4
 
-                    Image1 As image:
+                    imgUnreadSubmittedDS As image:
                         DisplayMode: =DisplayMode.View
                         Height: =20
                         Image: =email
