--- a/QuantumTechnicianApp/Src/DashboardScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/DashboardScreen.fx.yaml
@@ -665,8 +665,7 @@ DashboardScreen As screen:
                             Height: =Parent.Height
                             HoverFill: =RGBA(0, 0, 0, 0)
                             OnSelect: |
-                                =//Set(VarPopup,true)
-                                Navigate([@RejectedLeads],ScreenTransition.None,{Header: "Rejected"});
+                                =Navigate([@RejectedLeads],ScreenTransition.None,{Header: "Rejected"});
                             RadiusBottomLeft: =6
                             RadiusBottomRight: =6
                             RadiusTopLeft: =6
@@ -711,20 +710,6 @@ DashboardScreen As screen:
                     LayoutMinWidth: =250
                     Width: =Parent.Width/2.2
                     ZIndex: =1
-
-                    Circle1_1 As circle:
-                        BorderColor: =RGBA(255, 191, 0, 1)
-                        BorderThickness: =1
-                        DisplayMode: =DisplayMode.View
-                        Fill: =RGBA(255, 191, 0, 1)
-                        Height: =13
-                        Visible: |-
-                            =//If(CountRows(Filter(LeadChats,ToEmail=User().Email && 'Read '='Read  (LeadChats)'.No && IsQQApp='IsQQApp (LeadChats)'.Yes && LeadInformationLID.LeadStatus="Quoted"))=0,false,true)
-                            false
-                        Width: =13
-                        X: =ctnQuatedLeadsDS.Width/1.2
-                        Y: =Parent.Height/8
-                        ZIndex: =5
 
                     grpQuotedLeadsDS As group:
                         Height: =5
@@ -839,7 +824,7 @@ DashboardScreen As screen:
                             X: =
                             ZIndex: =4
 
-                    Image1_3 As image:
+                    imgUnreadQuotedDS As image:
                         DisplayMode: =DisplayMode.View
                         Height: =20
                         Image: =email
