--- a/QuantumTechnicianApp/Src/CreatLeadScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/CreatLeadScreen.fx.yaml
@@ -448,38 +448,6 @@ CreatLeadScreen As screen:
                         Y: =lblContractNumber.Y + lblContractNumber.Height+2
                         ZIndex: =1
 
-                    ErrorMessageContractNumber As label:
-                        AutoHeight: =true
-                        Color: =RGBA(255, 0, 0, 1)
-                        Height: =0
-                        Live: =Live.Assertive
-                        PaddingBottom: =0
-                        PaddingLeft: =0
-                        PaddingRight: =0
-                        PaddingTop: =0
-                        Size: =12
-                        Text: ="Contract number is not found"
-                        Visible: |-
-                            =//If(LookUp(SHContracts,CONTR_NUM=Value(
-                              //  IntxtContractNumber.Text)).CONTR_NUM<>Value(IntxtContractNumber.Text),true,false)
-                              false
-                        Width: =Parent.Width - 60
-                        X: =30
-                        Y: =IntxtContractNumber.Y + IntxtContractNumber.Height
-                        ZIndex: =2
-
-                    StarVisibleContractNumber As label:
-                        Align: =Align.Center
-                        Color: =RGBA(255, 0, 0, 1)
-                        Height: =IntxtContractNumber.Height
-                        Size: =21
-                        Text: ="*"
-                        Visible: =false
-                        Width: =30
-                        Wrap: =false
-                        Y: =lblContractNumber.Y
-                        ZIndex: =3
-
                     lblContractNumber As label:
                         AutoHeight: =true
                         Color: =RGBA(0, 0, 0, 1)
@@ -568,10 +536,7 @@ CreatLeadScreen As screen:
 
                     IntxtZipCode As text:
                         BorderColor: =If(IsBlank(Parent.Error), Color.LightGray, Color.Red)
-                        Default: |-
-                            =//Parent.Default
-                            //LookUp(SHContractDetails,CONTR_NUM=IntxtContractNumber.Text,CUST_ZIP)
-                            VarcontractRecord.CUST_ZIP
+                        Default: =VarcontractRecord.CUST_ZIP
                         DelayOutput: =true
                         DisabledColor: =RGBA(0, 0, 0, 1)
                         DisplayMode: |-
@@ -597,33 +562,6 @@ CreatLeadScreen As screen:
                         X: =30
                         Y: =lblZipcode.Y + lblZipcode.Height +2
                         ZIndex: =1
-
-                    ErrorMessageZipcode As label:
-                        AutoHeight: =true
-                        Height: =0
-                        Live: =Live.Assertive
-                        PaddingBottom: =0
-                        PaddingLeft: =0
-                        PaddingRight: =0
-                        PaddingTop: =0
-                        Size: =24
-                        Text: =Parent.Error
-                        Visible: =Parent.DisplayMode=DisplayMode.Edit
-                        Width: =Parent.Width - 60
-                        X: =30
-                        Y: =IntxtZipCode.Y + IntxtZipCode.Height
-                        ZIndex: =2
-
-                    StarVisibleZipcode As label:
-                        Align: =Align.Center
-                        Height: =lblZipcode.Height
-                        Size: =21
-                        Text: ="*"
-                        Visible: =And(Parent.Required, Parent.DisplayMode=DisplayMode.Edit)
-                        Width: =30
-                        Wrap: =false
-                        Y: =lblZipcode.Y
-                        ZIndex: =3
 
                     lblZipcode As label:
                         AutoHeight: =true
@@ -689,42 +627,6 @@ CreatLeadScreen As screen:
                         Y: =lblBuildingName.Y + lblBuildingName.Height+2
                         ZIndex: =1
 
-                    ErrorMessageBuilldingName As label:
-                        AutoHeight: =true
-                        Color: =RGBA(255, 0, 0, 1)
-                        DisplayMode: =DisplayMode.View
-                        Font: =Font.Arial
-                        Height: =If(VarContractNumber,48,0)
-                        Live: =Live.Assertive
-                        PaddingBottom: =0
-                        PaddingLeft: =0
-                        PaddingRight: =0
-                        PaddingTop: =0
-                        Size: =12
-                        Text: ="Contract Number is mandetory"
-                        Visible: |-
-                            =//IsBlankOrError(IntxtContractNumber.Text)
-                            false
-                        Width: =Parent.Width - 60
-                        X: =30
-                        Y: =IntxtBuildingName.Y + IntxtBuildingName.Height
-                        ZIndex: =2
-
-                    StarVisibleBuildingName As label:
-                        Align: =Align.Center
-                        Color: =RGBA(255, 0, 0, 1)
-                        Font: =Font.Arial
-                        Height: =lblBuildingName.Height
-                        Size: =21
-                        Text: ="*"
-                        Visible: |-
-                            =//IsBlankOrError(IntxtContractNumber.Text)
-                            false
-                        Width: =30
-                        Wrap: =false
-                        Y: =lblBuildingName.Y
-                        ZIndex: =3
-
                     lblBuildingName As label:
                         AutoHeight: =true
                         Color: =RGBA(0, 0, 0, 1)
@@ -732,9 +634,7 @@ CreatLeadScreen As screen:
                         Font: =Font.Arial
                         Height: =If(VarBuildingName,30,0)
                         Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
-                        Text: |-
-                            =//Parent.DisplayName
-                            "Building Name "
+                        Text: ="Building Name "
                         Visible: =VarBuildingName || !IsBlank(IntxtBuildingName)
                         Width: =Parent.Width - 50
                         Wrap: =false
@@ -761,10 +661,7 @@ CreatLeadScreen As screen:
 
                     IntxtAddress As text:
                         BorderColor: =If(IsBlank(Parent.Error),Color.LightGray, Color.Red)
-                        Default: |-
-                            =//Parent.Default
-                            //LookUp(SHContractDetails,CONTR_NUM=IntxtContractNumber.Text,CUST_ADDR)
-                            VarcontractRecord.CUST_ADDR
+                        Default: =VarcontractRecord.CUST_ADDR
                         DelayOutput: =true
                         DisabledColor: =RGBA(0, 0, 0, 1)
                         DisplayMode: =DisplayMode.Disabled
@@ -776,7 +673,9 @@ CreatLeadScreen As screen:
                         HoverFill: =RGBA(0, 0, 0, 0)
                         MaxLength: =Parent.MaxLength
                         Mode: =TextMode.MultiLine
-                        OnChange: =Set(VarAddress,true);
+                        OnChange: |-
+                            =// to show label
+                            Set(VarAddress,true);
                         PaddingBottom: =0
                         PaddingLeft: =5
                         PaddingTop: =15
@@ -790,33 +689,6 @@ CreatLeadScreen As screen:
                         X: =30
                         Y: =lblAddress.Y + lblAddress.Height +2
                         ZIndex: =1
-
-                    ErrorMessageAddress As label:
-                        AutoHeight: =true
-                        Height: =0
-                        Live: =Live.Assertive
-                        PaddingBottom: =0
-                        PaddingLeft: =0
-                        PaddingRight: =0
-                        PaddingTop: =0
-                        Size: =24
-                        Text: =Parent.Error
-                        Visible: =Parent.DisplayMode=DisplayMode.Edit
-                        Width: =Parent.Width - 60
-                        X: =30
-                        Y: =IntxtAddress.Y + IntxtAddress.Height
-                        ZIndex: =2
-
-                    StarVisibleAddress As label:
-                        Align: =Align.Center
-                        Height: =lblAddress.Height
-                        Size: =21
-                        Text: ="*"
-                        Visible: =And(Parent.Required, Parent.DisplayMode=DisplayMode.Edit)
-                        Width: =30
-                        Wrap: =false
-                        Y: =lblAddress.Y
-                        ZIndex: =3
 
                     lblAddress As label:
                         AutoHeight: =true
